2048-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
  namespace: 2048-game
spec:
  selector:
    app: frontend 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
